--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,12 +51,14 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     Core/Src/cpp_main.cpp
     Core/Components/LED/RgbLed.cpp
     Core/Components/LED/LedTest.cpp
+    Core/Components/CAN/CanController.cpp
     # Add user sources here
 )
 
 # Add include paths
 target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
     Core/Components/LED
+    Core/Components/CAN
     # Add user defined include paths
 )
 
